--- a/Bodymon/MainWindow.xaml
+++ b/Bodymon/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Image HorizontalAlignment="Left" Height="266" Margin="220,76,0,0" VerticalAlignment="Top" Width="490" Source="schachbrett-bezeichnung-a1.png"/>
+        <Image HorizontalAlignment="Left" Height="44" Margin="305,245,0,0" VerticalAlignment="Top" Width="26" Source="fototapeten-schachfigur-dame-mit-beschneidungspfad.jpg"/>
+        <Button HorizontalAlignment="Left" Margin="32,91,0,0" VerticalAlignment="Top" Width="75">
+            <Button Content="Button" Width="75" Click="Button_Click"/>
+        </Button>
+
     </Grid>
 </Window>
