--- a/Bodymon/MainWindow.xaml
+++ b/Bodymon/MainWindow.xaml
@@ -5,13 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bodymon"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" KeyDown="MainPage_KeyDown">
     <Grid>
-        <Image HorizontalAlignment="Left" Height="266" Margin="220,76,0,0" VerticalAlignment="Top" Width="490" Source="schachbrett-bezeichnung-a1.png"/>
-        <Image HorizontalAlignment="Left" Height="44" Margin="305,245,0,0" VerticalAlignment="Top" Width="26" Source="fototapeten-schachfigur-dame-mit-beschneidungspfad.jpg"/>
-        <Button HorizontalAlignment="Left" Margin="32,91,0,0" VerticalAlignment="Top" Width="75">
-            <Button Content="Button" Width="75" Click="Button_Click"/>
-        </Button>
-
+        <Image Name ="schach" HorizontalAlignment="Left" Height="266" Margin="220,76,0,0" VerticalAlignment="Top" Width="490" Source="schachbrett-bezeichnung-a1.png"/>
+        <Image Name ="player" HorizontalAlignment="" Height="44" Margin="305,245,0,0" VerticalAlignment="Top" Width="26" Source="fototapeten-schachfigur-dame-mit-beschneidungspfad.jpg"/>
+        <Button Name="btn_moveLeft" Height="47" Width="114" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="44,91,0,0" Click="Button_Click">hi</Button>
     </Grid>
+
 </Window>
