--- a/Bodymon/MainWindow.xaml
+++ b/Bodymon/MainWindow.xaml
@@ -5,11 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bodymon"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" KeyDown="MainPage_KeyDown">
+        Title="MainWindow" Height="450" Width="800" KeyDown="MainPage_KeyDown" KeyUp="MainPage_KeyUp" Loaded="Window_Loaded">
     <Grid>
-        <Image Name ="schach" HorizontalAlignment="Left" Height="266" Margin="220,76,0,0" VerticalAlignment="Top" Width="490" Source="schachbrett-bezeichnung-a1.png"/>
-        <Image Name ="player" HorizontalAlignment="" Height="44" Margin="305,245,0,0" VerticalAlignment="Top" Width="26" Source="fototapeten-schachfigur-dame-mit-beschneidungspfad.jpg"/>
-        <Button Name="btn_moveLeft" Height="47" Width="114" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="44,91,0,0" Click="Button_Click">hi</Button>
+        <Image Name ="schach" HorizontalAlignment="Left" Height="1168" Margin="-248,-153,-601,-596" VerticalAlignment="Top" Width="1641" Source="schachbrett-bezeichnung-a1.png"/>
+
+
+
+        <Rectangle Name="area" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="264" Margin="138,79,0,0" Stroke="Black" VerticalAlignment="Top" Width="500"/>
+
+        <Image Name ="player" HorizontalAlignment="Left" Height="44" Margin="305,245,0,0" VerticalAlignment="Top" Width="26" Source="fototapeten-schachfigur-dame-mit-beschneidungspfad.jpg"/>
     </Grid>
 
 </Window>
